replaced all links

--- a/photos_0_2.html
+++ b/photos_0_2.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>My Public Photos</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>My Public Photos</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -158,29 +158,29 @@ LY1();
 <div class="twoColThinRt">
 <div class="lc">
 <div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="sir aleks mam au me and sir mel" href="/photos/10107345/0/974228078" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/0_974228078m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="not and me" href="/photos/10107345/381028103/22714" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/38102810322714m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="c van at ako la lang" href="/photos/10107345/353697596/25104" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369759625104m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="rochelle suba" href="/photos/10107345/353697428/18716" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369742818716m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="chelle" href="/photos/10107345/353697300/34501" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369730034501m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="chelle and me" href="/photos/10107345/353697174/18624" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369717418624m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="chelle and me again" href="/photos/10107345/353697076/43511" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369707643511m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="kami ulit" href="/photos/10107345/353696878/16309" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369687816309m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="me not" href="/photos/10107345/353696690/29915" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369669029915m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="nica and me sa imx" href="/photos/10107345/296943300/4076" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/2969433004076m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="cr sa imx ground floor" href="/photos/10107345/296942341/23146" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29694234123146m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="sa ue" href="/photos/10107345/296941719/35632" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29694171935632m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="pic lang sa building" href="/photos/10107345/296940938/18804" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29694093818804m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="sa bahay" href="/photos/10107345/290212840/26139" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29021284026139m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="sa debu ulit ni mok2" href="/photos/10107345/290211950/38486" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29021195038486m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="sa debu ni mok2" href="/photos/10107345/290211529/20612" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29021152920612m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="sa bahay namin sa talavera!!" href="/photos/10107345/290211185/6360" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/2902111856360m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="" href="/photos/10107345/278763762/55577" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/27876376255577m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="" href="/photos/10107345/278763119/23630" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/27876311923630m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="" href="/photos/10107345/278762735/53808" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/27876273553808m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sir aleks mam au me and sir mel" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/0_974228078m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="not and me" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/38102810322714m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="c van at ako la lang" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369759625104m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="rochelle suba" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369742818716m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="chelle" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369730034501m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="chelle and me" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369717418624m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="chelle and me again" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369707643511m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="kami ulit" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369687816309m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="me not" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/35369669029915m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="nica and me sa imx" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/2969433004076m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="cr sa imx ground floor" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29694234123146m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sa ue" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29694171935632m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="pic lang sa building" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29694093818804m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sa bahay" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29021284026139m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sa debu ulit ni mok2" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29021195038486m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sa debu ni mok2" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/29021152920612m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sa bahay namin sa talavera!!" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/2902111856360m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/27876376255577m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/27876311923630m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/27876273553808m.jpg)" class="photoThumb"></a></div></div>
 </div>
 <div id="paginationBox"><div id="pagination">
-<a href="/viewphotos.php?page=1&amp;a=0&amp;uid=10107345&amp;mac=" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=0&amp;a=0&amp;uid=10107345" class=""><b>1</b></a> <a href="/viewphotos.php?page=1&amp;a=0&amp;uid=10107345" class=""><b>2</b></a> <span class="active"><b>3</b></span> <a href="/viewphotos.php?page=3&amp;a=0&amp;uid=10107345" class=""><b>4</b></a> <a href="/viewphotos.php?page=4&amp;a=0&amp;uid=10107345" class=""><b>5</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=3&amp;a=0&amp;uid=10107345&amp;mac=" class="next"><b>&gt;</b></a>
+<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="#" class=""><b>1</b></a> <a href="#" class=""><b>2</b></a> <span class="active"><b>3</b></span> <a href="#" class=""><b>4</b></a> <a href="#" class=""><b>5</b></a> <span class="dots" style="display:none"></span><a href="#" class="next"><b>&gt;</b></a>
 </div></div>
 </div>
 <div class="rc">
@@ -370,7 +370,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -380,7 +380,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx10.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx10.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
