--- a/albums_0.html
+++ b/albums_0.html
@@ -24,12 +24,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -98,16 +98,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -134,7 +134,7 @@ LY1();
 <script type="text/javascript">
 	var primaryAlbumRid = '';
 </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
 <h1>lynel's Photos</h1>
 <div id="albumCount">9 albums</div>
@@ -148,9 +148,9 @@ LY1();
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="albumGallery" class="clearfix">
 <div class="albumBox">
-<div class="albumBg"><a title="puerto galera" class="albumThumb" href="/viewphotos.php?a=911246209&amp;uid=10107345" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_816672116m.jpg)"></a></div>
+<div class="albumBg"><a title="puerto galera" class="albumThumb" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_816672116m.jpg)"></a></div>
 <ul>
-<li><a href="/viewphotos.php?a=911246209&amp;uid=10107345"><span id="abAlbumName-911246209" class="albumName">puerto galera...</span></a></li>
+<li><a href="#"><span id="abAlbumName-911246209" class="albumName">puerto galera...</span></a></li>
 <li class="albumPhotoCount">133 photos<span title="Private Album" id="private_911246209_10107345" class="fsIcon16x16 fsIconPrivate" href="#" style="display: none"><img src="http://images.friendster.com/images/s.gif"></span>
 </li>
 <li>Created: 04/14/09</li>
@@ -168,9 +168,9 @@ LY1();
 </ul>
 </div>
 <div class="albumBox">
-<div class="albumBg"><a title="STAR CITY" class="albumThumb" href="/viewphotos.php?a=642952954&amp;uid=10107345" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_721267955m.jpg)"></a></div>
+<div class="albumBg"><a title="STAR CITY" class="albumThumb" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_721267955m.jpg)"></a></div>
 <ul>
-<li><a href="/viewphotos.php?a=642952954&amp;uid=10107345"><span id="abAlbumName-642952954" class="albumName">STAR CITY</span></a></li>
+<li><a href="#"><span id="abAlbumName-642952954" class="albumName">STAR CITY</span></a></li>
 <li class="albumPhotoCount">20 photos<span title="Private Album" id="private_642952954_10107345" class="fsIcon16x16 fsIconPrivate" href="#" style="display: none"><img src="http://images.friendster.com/images/s.gif"></span>
 </li>
 <li>Created: 01/25/09</li>
@@ -188,9 +188,9 @@ LY1();
 </ul>
 </div>
 <div class="albumBox">
-<div class="albumBg"><a title="YT" class="albumThumb" href="/viewphotos.php?a=764158826&amp;uid=10107345" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_232962733m.jpg)"></a></div>
+<div class="albumBg"><a title="YT" class="albumThumb" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_232962733m.jpg)"></a></div>
 <ul>
-<li><a href="/viewphotos.php?a=764158826&amp;uid=10107345"><span id="abAlbumName-764158826" class="albumName">YT</span></a></li>
+<li><a href="#"><span id="abAlbumName-764158826" class="albumName">YT</span></a></li>
 <li class="albumPhotoCount">8 photos<span title="Private Album" id="private_764158826_10107345" class="fsIcon16x16 fsIconPrivate" href="#" style="display: none"><img src="http://images.friendster.com/images/s.gif"></span>
 </li>
 <li>Created: 12/01/08</li>
@@ -208,9 +208,9 @@ LY1();
 </ul>
 </div>
 <div class="albumBox">
-<div class="albumBg"><a title="BATCH AUG 19 OUTING" class="albumThumb" href="/viewphotos.php?a=902568354&amp;uid=10107345" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_498284787m.jpg)"></a></div>
+<div class="albumBg"><a title="BATCH AUG 19 OUTING" class="albumThumb" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_498284787m.jpg)"></a></div>
 <ul>
-<li><a href="/viewphotos.php?a=902568354&amp;uid=10107345"><span id="abAlbumName-902568354" class="albumName">BATCH AUG 19 OUTING...</span></a></li>
+<li><a href="#"><span id="abAlbumName-902568354" class="albumName">BATCH AUG 19 OUTING...</span></a></li>
 <li class="albumPhotoCount">15 photos<span title="Private Album" id="private_902568354_10107345" class="fsIcon16x16 fsIconPrivate" href="#" style="display: none"><img src="http://images.friendster.com/images/s.gif"></span>
 </li>
 <li>Created: 11/22/08</li>
@@ -228,9 +228,9 @@ LY1();
 </ul>
 </div>
 <div class="albumBox">
-<div class="albumBg"><a title="bonding moments" class="albumThumb" href="/viewphotos.php?a=199504895&amp;uid=10107345" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_880548262m.jpg)"></a></div>
+<div class="albumBg"><a title="bonding moments" class="albumThumb" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_880548262m.jpg)"></a></div>
 <ul>
-<li><a href="/viewphotos.php?a=199504895&amp;uid=10107345"><span id="abAlbumName-199504895" class="albumName">bonding moments...</span></a></li>
+<li><a href="#"><span id="abAlbumName-199504895" class="albumName">bonding moments...</span></a></li>
 <li class="albumPhotoCount">18 photos<span title="Private Album" id="private_199504895_10107345" class="fsIcon16x16 fsIconPrivate" href="#" style="display: none"><img src="http://images.friendster.com/images/s.gif"></span>
 </li>
 <li>Created: 11/09/08</li>
@@ -248,9 +248,9 @@ LY1();
 </ul>
 </div>
 <div class="albumBox">
-<div class="albumBg"><a title="cubemates 32.13" class="albumThumb" href="/viewphotos.php?a=691042210&amp;uid=10107345" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_889678548m.jpg)"></a></div>
+<div class="albumBg"><a title="cubemates 32.13" class="albumThumb" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_889678548m.jpg)"></a></div>
 <ul>
-<li><a href="/viewphotos.php?a=691042210&amp;uid=10107345"><span id="abAlbumName-691042210" class="albumName">cubemates 32.13...</span></a></li>
+<li><a href="#"><span id="abAlbumName-691042210" class="albumName">cubemates 32.13...</span></a></li>
 <li class="albumPhotoCount">11 photos<span title="Private Album" id="private_691042210_10107345" class="fsIcon16x16 fsIconPrivate" href="#" style="display: none"><img src="http://images.friendster.com/images/s.gif"></span>
 </li>
 <li>Created: 10/02/08</li>
@@ -268,9 +268,9 @@ LY1();
 </ul>
 </div>
 <div class="albumBox">
-<div class="albumBg"><a title="depensa (september 08)" class="albumThumb" href="/viewphotos.php?a=560758670&amp;uid=10107345" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_327053826m.jpg)"></a></div>
+<div class="albumBg"><a title="depensa (september 08)" class="albumThumb" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_327053826m.jpg)"></a></div>
 <ul>
-<li><a href="/viewphotos.php?a=560758670&amp;uid=10107345"><span id="abAlbumName-560758670" class="albumName">depensa (september ...</span></a></li>
+<li><a href="#"><span id="abAlbumName-560758670" class="albumName">depensa (september ...</span></a></li>
 <li class="albumPhotoCount">23 photos<span title="Private Album" id="private_560758670_10107345" class="fsIcon16x16 fsIconPrivate" href="#" style="display: none"><img src="http://images.friendster.com/images/s.gif"></span>
 </li>
 <li>Created: 10/01/08</li>
@@ -288,9 +288,9 @@ LY1();
 </ul>
 </div>
 <div class="albumBox">
-<div class="albumBg"><a title="graduation day!!!" class="albumThumb" href="/viewphotos.php?a=160878840&amp;uid=10107345" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_182832462m.jpg)"></a></div>
+<div class="albumBg"><a title="graduation day!!!" class="albumThumb" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_182832462m.jpg)"></a></div>
 <ul>
-<li><a href="/viewphotos.php?a=160878840&amp;uid=10107345"><span id="abAlbumName-160878840" class="albumName">graduation day!!!...</span></a></li>
+<li><a href="#"><span id="abAlbumName-160878840" class="albumName">graduation day!!!...</span></a></li>
 <li class="albumPhotoCount">36 photos<span title="Private Album" id="private_160878840_10107345" class="fsIcon16x16 fsIconPrivate" href="#" style="display: none"><img src="http://images.friendster.com/images/s.gif"></span>
 </li>
 <li>Created: 04/17/08</li>
@@ -308,9 +308,9 @@ LY1();
 </ul>
 </div>
 <div class="albumBox">
-<div class="albumBg"><a title="My Public Photos" class="albumThumb" href="/viewphotos.php?a=0&amp;uid=10107345" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_685439466m.jpg)"></a></div>
+<div class="albumBg"><a title="My Public Photos" class="albumThumb" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_685439466m.jpg)"></a></div>
 <ul>
-<li><a href="/viewphotos.php?a=0&amp;uid=10107345"><span id="abAlbumName-0" class="albumName">My Public Photos...</span></a></li>
+<li><a href="#"><span id="abAlbumName-0" class="albumName">My Public Photos...</span></a></li>
 <li class="albumPhotoCount">81 photos<span title="Private Album" id="private_0_10107345" class="fsIcon16x16 fsIconPrivate" href="#" style="display: none"><img src="http://images.friendster.com/images/s.gif"></span>
 </li>
 <li>Created: 01/26/08</li>
@@ -504,7 +504,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -514,7 +514,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx187.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx187.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
