--- a/photos_0_0.html
+++ b/photos_0_0.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>My Public Photos</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>My Public Photos</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -158,29 +158,29 @@ LY1();
 <div class="twoColThinRt">
 <div class="lc">
 <div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="02162008939.jpg" href="/photos/10107345/1/828575624" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_828575624m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="02162008938.jpg" href="/photos/10107345/1/770039836" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_770039836m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="02172008969.jpg" href="/photos/10107345/1/965668854" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_965668854m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="lynel.jpg" href="/photos/10107345/1/685439466" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_685439466m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="" href="/photos/10107345/1/357023670" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_357023670m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="" href="/photos/10107345/1/883537885" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_883537885m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="" href="/photos/10107345/1/362576625" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_362576625m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="wala lang" href="/photos/10107345/1/437944851" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_437944851m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="avie and ako hahah!!!" href="/photos/10107345/1/708813775" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_708813775m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="si yet may sore eyes sa irish ahahhah" href="/photos/10107345/1/767187261" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_767187261m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="" href="/photos/10107345/1/238733388" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_238733388m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1 barkada nag papic sa seksing santa ahahha" href="/photos/10107345/1/295356199" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_295356199m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="iba talaga ang sikat ahhaha" href="/photos/10107345/1/283374070" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_283374070m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="change custome na eheheh" href="/photos/10107345/1/213461845" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_213461845m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="kami ni may.jpg" href="/photos/10107345/1/505853983" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_505853983m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_3281.JPG" href="/photos/10107345/1/607765281" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_607765281m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_3293.JPG" href="/photos/10107345/1/551220836" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_551220836m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_3269.JPG" href="/photos/10107345/1/366750450" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_366750450m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="ewan.jpg" href="/photos/10107345/1/599529890" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_599529890m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="bagay ba? eheheh" href="/photos/10107345/1/702468429" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_702468429m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="02162008939.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_828575624m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="02162008938.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_770039836m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="02172008969.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_965668854m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="lynel.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_685439466m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_357023670m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_883537885m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_362576625m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="wala lang" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_437944851m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="avie and ako hahah!!!" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_708813775m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="si yet may sore eyes sa irish ahahhah" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_767187261m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_238733388m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1 barkada nag papic sa seksing santa ahahha" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_295356199m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="iba talaga ang sikat ahhaha" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_283374070m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="change custome na eheheh" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_213461845m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="kami ni may.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_505853983m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_3281.JPG" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_607765281m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_3293.JPG" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_551220836m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_3269.JPG" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_366750450m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="ewan.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_599529890m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="bagay ba? eheheh" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_702468429m.jpg)" class="photoThumb"></a></div></div>
 </div>
 <div id="paginationBox"><div id="pagination">
-<a href="/viewphotos.php?page=0&amp;a=0&amp;uid=10107345&amp;mac=" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><span class="active"><b>1</b></span> <a href="/viewphotos.php?page=1&amp;a=0&amp;uid=10107345" class=""><b>2</b></a> <a href="/viewphotos.php?page=2&amp;a=0&amp;uid=10107345" class=""><b>3</b></a> <a href="/viewphotos.php?page=3&amp;a=0&amp;uid=10107345" class=""><b>4</b></a> <a href="/viewphotos.php?page=4&amp;a=0&amp;uid=10107345" class=""><b>5</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=1&amp;a=0&amp;uid=10107345&amp;mac=" class="next"><b>&gt;</b></a>
+<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><span class="active"><b>1</b></span> <a href="#" class=""><b>2</b></a> <a href="#" class=""><b>3</b></a> <a href="#" class=""><b>4</b></a> <a href="#" class=""><b>5</b></a> <span class="dots" style="display:none"></span><a href="#" class="next"><b>&gt;</b></a>
 </div></div>
 </div>
 <div class="rc">
@@ -370,7 +370,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -380,7 +380,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx205.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx205.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
