--- a/photos_0_3.html
+++ b/photos_0_3.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>My Public Photos</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>My Public Photos</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -158,29 +158,29 @@ LY1();
 <div class="twoColThinRt">
 <div class="lc">
 <div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="sa kfc sa marikina" href="/photos/10107345/243355231/34254" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/24335523134254m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="sa room sa ue" href="/photos/10107345/243354130/26459" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/24335413026459m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="sa bahay" href="/photos/10107345/243350460/10225" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/24335046010225m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="si fem(ganda daw)  at ako (sexy)" href="/photos/10107345/241202891/25235" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/24120289125235m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="fem nica at me(sexy)" href="/photos/10107345/232801393/28066" style="background-image:url(http://photos-p.friendster.com/photos/46/16/8516164/23280139328066m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="pic ulit sa cr ng ccss" href="/photos/10107345/223744197/17804" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/22374419717804m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="sexy!!!" href="/photos/10107345/223743455/58713" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/22374345558713m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="pic lang sa bahay" href="/photos/10107345/223742833/23795" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/22374283323795m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="pic sa banyo sa bahay" href="/photos/10107345/223742183/5009" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/2237421835009m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="dun ulit" href="/photos/10107345/223741103/12233" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/22374110312233m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="university of the east" href="/photos/10107345/204591398/59562" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/20459139859562m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="ang sexy at ang maganda!!!!" href="/photos/10107345/204591116/32250" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/20459111632250m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="nyek!!!!!!!" href="/photos/10107345/166787606/56346" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/16678760656346m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="pic sa cr ng ue ccss" href="/photos/10107345/166786849/60126" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/16678684960126m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="wala lang" href="/photos/10107345/142877459/29497" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/14287745929497m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="si mic mic to!!!!" href="/photos/10107345/76406453/23301" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/7640645323301m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="barkada ko sa province at kahit saan" href="/photos/10107345/72970623/39600" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/7297062339600m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="js js js js lang!!!" href="/photos/10107345/72970512/46037" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/7297051246037m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="trip" href="/photos/10107345/72964647/37864" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/7296464737864m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="trip" href="/photos/10107345/47031608/64253" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/4703160864253m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sa kfc sa marikina" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/24335523134254m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sa room sa ue" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/24335413026459m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sa bahay" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/24335046010225m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="si fem(ganda daw)  at ako (sexy)" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/24120289125235m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="fem nica at me(sexy)" href="#" style="background-image:url(http://photos-p.friendster.com/photos/46/16/8516164/23280139328066m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="pic ulit sa cr ng ccss" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/22374419717804m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sexy!!!" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/22374345558713m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="pic lang sa bahay" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/22374283323795m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="pic sa banyo sa bahay" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/2237421835009m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="dun ulit" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/22374110312233m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="university of the east" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/20459139859562m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="ang sexy at ang maganda!!!!" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/20459111632250m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="nyek!!!!!!!" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/16678760656346m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="pic sa cr ng ue ccss" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/16678684960126m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="wala lang" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/14287745929497m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="si mic mic to!!!!" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/7640645323301m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="barkada ko sa province at kahit saan" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/7297062339600m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="js js js js lang!!!" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/7297051246037m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="trip" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/7296464737864m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="trip" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/4703160864253m.jpg)" class="photoThumb"></a></div></div>
 </div>
 <div id="paginationBox"><div id="pagination">
-<a href="/viewphotos.php?page=2&amp;a=0&amp;uid=10107345&amp;mac=" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=0&amp;a=0&amp;uid=10107345" class=""><b>1</b></a> <a href="/viewphotos.php?page=1&amp;a=0&amp;uid=10107345" class=""><b>2</b></a> <a href="/viewphotos.php?page=2&amp;a=0&amp;uid=10107345" class=""><b>3</b></a> <span class="active"><b>4</b></span> <a href="/viewphotos.php?page=4&amp;a=0&amp;uid=10107345" class=""><b>5</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=4&amp;a=0&amp;uid=10107345&amp;mac=" class="next"><b>&gt;</b></a>
+<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="#" class=""><b>1</b></a> <a href="#" class=""><b>2</b></a> <a href="#" class=""><b>3</b></a> <span class="active"><b>4</b></span> <a href="#" class=""><b>5</b></a> <span class="dots" style="display:none"></span><a href="#" class="next"><b>&gt;</b></a>
 </div></div>
 </div>
 <div class="rc">
@@ -370,7 +370,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -380,7 +380,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx146.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx146.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
