--- a/photos_160878840_0.html
+++ b/photos_160878840_0.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>graduation day!!!</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>graduation day!!!</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -158,29 +158,29 @@ LY1();
 <div class="twoColThinRt">
 <div class="lc">
 <div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="Lynel Madelline Llamas_1406   toga.jpg" href="/photos/10107345/1/182832462" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_182832462m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="lynel.jpg" href="/photos/10107345/1/866141982" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_866141982m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0017.jpg" href="/photos/10107345/1/544331760" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_544331760m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="sayang di kumpleto ampf :(" href="/photos/10107345/1/275406625" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_275406625m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0051.jpg" href="/photos/10107345/1/764709624" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_764709624m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0050.jpg" href="/photos/10107345/1/508696995" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_508696995m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0049.jpg" href="/photos/10107345/1/559676043" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_559676043m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0043.jpg" href="/photos/10107345/1/657566499" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_657566499m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0042.jpg" href="/photos/10107345/1/715218279" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_715218279m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0039.jpg" href="/photos/10107345/1/568792068" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_568792068m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0038.jpg" href="/photos/10107345/1/115358503" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_115358503m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0035.jpg" href="/photos/10107345/1/645312370" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_645312370m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0032.jpg" href="/photos/10107345/1/256432131" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_256432131m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0029.jpg" href="/photos/10107345/1/338686386" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_338686386m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0027.jpg" href="/photos/10107345/1/495898417" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_495898417m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0026.jpg" href="/photos/10107345/1/614853120" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_614853120m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0024.jpg" href="/photos/10107345/1/856960774" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_856960774m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0023.jpg" href="/photos/10107345/1/533198987" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_533198987m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0019.jpg" href="/photos/10107345/1/798082930" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_798082930m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0061.jpg" href="/photos/10107345/1/592321242" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_592321242m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="Lynel Madelline Llamas_1406   toga.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_182832462m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="lynel.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_866141982m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0017.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_544331760m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="sayang di kumpleto ampf :(" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_275406625m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0051.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_764709624m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0050.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_508696995m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0049.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_559676043m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0043.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_657566499m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0042.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_715218279m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0039.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_568792068m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0038.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_115358503m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0035.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_645312370m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0032.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_256432131m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0029.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_338686386m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0027.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_495898417m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0026.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_614853120m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0024.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_856960774m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0023.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_533198987m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0019.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_798082930m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0061.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_592321242m.jpg)" class="photoThumb"></a></div></div>
 </div>
 <div id="paginationBox"><div id="pagination">
-<a href="/viewphotos.php?page=0&amp;a=160878840&amp;uid=10107345&amp;mac=" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><span class="active"><b>1</b></span> <a href="/viewphotos.php?page=1&amp;a=160878840&amp;uid=10107345" class=""><b>2</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=1&amp;a=160878840&amp;uid=10107345&amp;mac=" class="next"><b>&gt;</b></a>
+<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><span class="active"><b>1</b></span> <a href="#" class=""><b>2</b></a> <span class="dots" style="display:none"></span><a href="#" class="next"><b>&gt;</b></a>
 </div></div>
 </div>
 <div class="rc">
@@ -367,7 +367,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -377,7 +377,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx384.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx384.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
