--- a/photos_199504895_0.html
+++ b/photos_199504895_0.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>bonding moments</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>bonding moments</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -157,24 +157,24 @@ LY1();
 </div></div>
 <div class="twoColThinRt">
 <div class="lc"><div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="Bitter boy!!" href="/photos/10107345/1/880548262" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_880548262m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title='bitter "curl" gurl at ako' href="/photos/10107345/1/459533265" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_459533265m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="si labergurl at si laberboy" href="/photos/10107345/1/329002634" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_329002634m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="si karlo bitter ehhehee" href="/photos/10107345/1/226236388" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_226236388m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="bitter" href="/photos/10107345/1/322690878" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_322690878m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="jojo and jun" href="/photos/10107345/1/718999467" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_718999467m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title='si bitter "curl" gurl yung bitter ha' href="/photos/10107345/1/431097404" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_431097404m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="hahhahah" href="/photos/10107345/1/272015446" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_272015446m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="DSC00381.JPG" href="/photos/10107345/1/972558468" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_972558468m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="DSC00380.JPG" href="/photos/10107345/1/239367383" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_239367383m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="DSC00391.JPG" href="/photos/10107345/1/488396456" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_488396456m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="DSC00390.JPG" href="/photos/10107345/1/556684624" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_556684624m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_323924100l.jpg" href="/photos/10107345/1/216577718" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_216577718m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_424762404l.jpg" href="/photos/10107345/1/305138506" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_305138506m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_460091595l.jpg" href="/photos/10107345/1/412456089" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_412456089m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_561839219l.jpg" href="/photos/10107345/1/189644496" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_189644496m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_640880875l.jpg" href="/photos/10107345/1/581319684" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_581319684m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_839662412l.jpg" href="/photos/10107345/1/140305201" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_140305201m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="Bitter boy!!" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_880548262m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title='bitter "curl" gurl at ako' href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_459533265m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="si labergurl at si laberboy" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_329002634m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="si karlo bitter ehhehee" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_226236388m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="bitter" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_322690878m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="jojo and jun" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_718999467m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title='si bitter "curl" gurl yung bitter ha' href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_431097404m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="hahhahah" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_272015446m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="DSC00381.JPG" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_972558468m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="DSC00380.JPG" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_239367383m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="DSC00391.JPG" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_488396456m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="DSC00390.JPG" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_556684624m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_323924100l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_216577718m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_424762404l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_305138506m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_460091595l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_412456089m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_561839219l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_189644496m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_640880875l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_581319684m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_839662412l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_140305201m.jpg)" class="photoThumb"></a></div></div>
 </div></div>
 <div class="rc">
 <script language="JavaScript">
@@ -351,7 +351,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -361,7 +361,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx393.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx393.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
