--- a/photos_560758670_0.html
+++ b/photos_560758670_0.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>depensa (september 08)</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>depensa (september 08)</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -158,29 +158,29 @@ LY1();
 <div class="twoColThinRt">
 <div class="lc">
 <div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="IMG_0394.jpg" href="/photos/10107345/1/327053826" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_327053826m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0368.jpg" href="/photos/10107345/1/280975086" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_280975086m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0369.jpg" href="/photos/10107345/1/257524368" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_257524368m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0372.jpg" href="/photos/10107345/1/177155998" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_177155998m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0373.jpg" href="/photos/10107345/1/619713809" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_619713809m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0381.jpg" href="/photos/10107345/1/994571226" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_994571226m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0383.jpg" href="/photos/10107345/1/317007590" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_317007590m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0389.jpg" href="/photos/10107345/1/759330870" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_759330870m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0382.jpg" href="/photos/10107345/1/707529634" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_707529634m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0386.jpg" href="/photos/10107345/1/917896680" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_917896680m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0384.jpg" href="/photos/10107345/1/474092838" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_474092838m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0383.jpg" href="/photos/10107345/1/668168646" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_668168646m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0382.jpg" href="/photos/10107345/1/772956401" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_772956401m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0381.jpg" href="/photos/10107345/1/960895302" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_960895302m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0372.jpg" href="/photos/10107345/1/166789082" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_166789082m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0369.jpg" href="/photos/10107345/1/287387789" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_287387789m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0368.jpg" href="/photos/10107345/1/971869814" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_971869814m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0394.jpg" href="/photos/10107345/1/745021157" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_745021157m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0397.jpg" href="/photos/10107345/1/424237262" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_424237262m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="IMG_0379.jpg" href="/photos/10107345/1/329926700" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_329926700m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0394.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_327053826m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0368.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_280975086m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0369.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_257524368m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0372.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_177155998m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0373.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_619713809m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0381.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_994571226m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0383.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_317007590m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0389.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_759330870m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0382.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_707529634m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0386.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_917896680m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0384.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_474092838m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0383.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_668168646m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0382.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_772956401m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0381.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_960895302m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0372.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_166789082m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0369.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_287387789m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0368.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_971869814m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0394.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_745021157m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0397.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_424237262m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="IMG_0379.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_329926700m.jpg)" class="photoThumb"></a></div></div>
 </div>
 <div id="paginationBox"><div id="pagination">
-<a href="/viewphotos.php?page=0&amp;a=560758670&amp;uid=10107345&amp;mac=" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><span class="active"><b>1</b></span> <a href="/viewphotos.php?page=1&amp;a=560758670&amp;uid=10107345" class=""><b>2</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=1&amp;a=560758670&amp;uid=10107345&amp;mac=" class="next"><b>&gt;</b></a>
+<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><span class="active"><b>1</b></span> <a href="#" class=""><b>2</b></a> <span class="dots" style="display:none"></span><a href="#" class="next"><b>&gt;</b></a>
 </div></div>
 </div>
 <div class="rc">
@@ -367,7 +367,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -377,7 +377,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx190.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx190.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
