--- a/photos_902568354_0.html
+++ b/photos_902568354_0.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>BATCH AUG 19 OUTING</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>BATCH AUG 19 OUTING</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -157,21 +157,21 @@ LY1();
 </div></div>
 <div class="twoColThinRt">
 <div class="lc"><div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="1_856188210l.jpg" href="/photos/10107345/1/498284787" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_498284787m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_102723217l.jpg" href="/photos/10107345/1/687774014" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_687774014m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_111939169l.jpg" href="/photos/10107345/1/429754152" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_429754152m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_168253679l.jpg" href="/photos/10107345/1/980047277" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_980047277m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_209055832l.jpg" href="/photos/10107345/1/327343189" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_327343189m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_212790135l.jpg" href="/photos/10107345/1/344344297" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_344344297m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_282427382l.jpg" href="/photos/10107345/1/742293383" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_742293383m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_296179967l.jpg" href="/photos/10107345/1/582267538" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_582267538m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_296659255l.jpg" href="/photos/10107345/1/240322324" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_240322324m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_344998759l.jpg" href="/photos/10107345/1/328389965" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_328389965m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_364023616l.jpg" href="/photos/10107345/1/563157522" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_563157522m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_377347521l.jpg" href="/photos/10107345/1/492197373" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_492197373m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_662129606l.jpg" href="/photos/10107345/1/123346574" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_123346574m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_734747179l.jpg" href="/photos/10107345/1/815969395" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_815969395m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_797640877l.jpg" href="/photos/10107345/1/866452264" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_866452264m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_856188210l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_498284787m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_102723217l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_687774014m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_111939169l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_429754152m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_168253679l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_980047277m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_209055832l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_327343189m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_212790135l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_344344297m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_282427382l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_742293383m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_296179967l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_582267538m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_296659255l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_240322324m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_344998759l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_328389965m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_364023616l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_563157522m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_377347521l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_492197373m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_662129606l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_123346574m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_734747179l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_815969395m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_797640877l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_866452264m.jpg)" class="photoThumb"></a></div></div>
 </div></div>
 <div class="rc">
 <script language="JavaScript">
@@ -348,7 +348,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -358,7 +358,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx180.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx180.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
