--- a/photos_911246209_1.html
+++ b/photos_911246209_1.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>puerto galera</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>puerto galera</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -158,29 +158,29 @@ LY1();
 <div class="twoColThinRt">
 <div class="lc">
 <div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="1_210821932l.jpg" href="/photos/10107345/1/769879080" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_769879080m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_212707595l.jpg" href="/photos/10107345/1/775420757" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_775420757m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_214416534l.jpg" href="/photos/10107345/1/431073822" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_431073822m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_221307733l.jpg" href="/photos/10107345/1/290670949" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_290670949m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_228033688l.jpg" href="/photos/10107345/1/304212147" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_304212147m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_244545560l.jpg" href="/photos/10107345/1/804692560" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_804692560m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_248534238l.jpg" href="/photos/10107345/1/240447936" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_240447936m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_256887340l.jpg" href="/photos/10107345/1/583829050" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_583829050m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_271100444l.jpg" href="/photos/10107345/1/663491432" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_663491432m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_278497330l.jpg" href="/photos/10107345/1/921902462" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_921902462m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_278728981l.jpg" href="/photos/10107345/1/825056809" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_825056809m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_285166858l.jpg" href="/photos/10107345/1/470985580" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_470985580m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_293605734l.jpg" href="/photos/10107345/1/358179026" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_358179026m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_297099927l.jpg" href="/photos/10107345/1/644618760" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_644618760m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_298860649l.jpg" href="/photos/10107345/1/401154203" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_401154203m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_299078863l.jpg" href="/photos/10107345/1/248673554" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_248673554m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_311264476l.jpg" href="/photos/10107345/1/593463658" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_593463658m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_323239372l.jpg" href="/photos/10107345/1/608362444" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_608362444m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_330716212l.jpg" href="/photos/10107345/1/824231342" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_824231342m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_337911613l.jpg" href="/photos/10107345/1/536740627" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_536740627m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_210821932l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_769879080m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_212707595l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_775420757m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_214416534l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_431073822m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_221307733l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_290670949m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_228033688l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_304212147m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_244545560l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_804692560m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_248534238l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_240447936m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_256887340l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_583829050m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_271100444l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_663491432m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_278497330l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_921902462m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_278728981l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_825056809m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_285166858l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_470985580m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_293605734l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_358179026m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_297099927l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_644618760m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_298860649l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_401154203m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_299078863l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_248673554m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_311264476l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_593463658m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_323239372l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_608362444m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_330716212l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_824231342m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_337911613l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_536740627m.jpg)" class="photoThumb"></a></div></div>
 </div>
 <div id="paginationBox"><div id="pagination">
-<a href="/viewphotos.php?page=0&amp;a=911246209&amp;uid=10107345&amp;mac=" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=0&amp;a=911246209&amp;uid=10107345" class=""><b>1</b></a> <span class="active"><b>2</b></span> <a href="/viewphotos.php?page=2&amp;a=911246209&amp;uid=10107345" class=""><b>3</b></a> <a href="/viewphotos.php?page=3&amp;a=911246209&amp;uid=10107345" class=""><b>4</b></a> <a href="/viewphotos.php?page=4&amp;a=911246209&amp;uid=10107345" class=""><b>5</b></a> <a href="/viewphotos.php?page=5&amp;a=911246209&amp;uid=10107345" class=""><b>6</b></a> <a href="/viewphotos.php?page=6&amp;a=911246209&amp;uid=10107345" class=""><b>7</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=2&amp;a=911246209&amp;uid=10107345&amp;mac=" class="next"><b>&gt;</b></a>
+<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="#" class=""><b>1</b></a> <span class="active"><b>2</b></span> <a href="#" class=""><b>3</b></a> <a href="#" class=""><b>4</b></a> <a href="#" class=""><b>5</b></a> <a href="#" class=""><b>6</b></a> <a href="#" class=""><b>7</b></a> <span class="dots" style="display:none"></span><a href="#" class="next"><b>&gt;</b></a>
 </div></div>
 </div>
 <div class="rc">
@@ -372,7 +372,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -382,7 +382,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx190.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx190.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
