--- a/photos_911246209_2.html
+++ b/photos_911246209_2.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>puerto galera</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>puerto galera</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -158,29 +158,29 @@ LY1();
 <div class="twoColThinRt">
 <div class="lc">
 <div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="1_343550491l.jpg" href="/photos/10107345/1/486116102" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_486116102m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_344125711l.jpg" href="/photos/10107345/1/541281241" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_541281241m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_360339141l.jpg" href="/photos/10107345/1/147021929" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_147021929m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_361945955l.jpg" href="/photos/10107345/1/164552443" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_164552443m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_364423968l.jpg" href="/photos/10107345/1/701266704" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_701266704m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_366248454l.jpg" href="/photos/10107345/1/812600530" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_812600530m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_370762839l.jpg" href="/photos/10107345/1/619074990" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_619074990m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_372110287l.jpg" href="/photos/10107345/1/618791193" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_618791193m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_373506812l.jpg" href="/photos/10107345/1/255972838" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_255972838m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_381728180l.jpg" href="/photos/10107345/1/283961264" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_283961264m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_388469322l.jpg" href="/photos/10107345/1/416853010" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_416853010m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_415794598l.jpg" href="/photos/10107345/1/217589638" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_217589638m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_448843043l.jpg" href="/photos/10107345/1/696395074" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_696395074m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_458994501l.jpg" href="/photos/10107345/1/779776588" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_779776588m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_472052429l.jpg" href="/photos/10107345/1/441888387" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_441888387m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_475609976l.jpg" href="/photos/10107345/1/528429505" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_528429505m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_491546955l.jpg" href="/photos/10107345/1/844234733" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_844234733m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_503109566l.jpg" href="/photos/10107345/1/531540704" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_531540704m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_517322100l.jpg" href="/photos/10107345/1/358484564" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_358484564m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_533417164l.jpg" href="/photos/10107345/1/817744688" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_817744688m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_343550491l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_486116102m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_344125711l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_541281241m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_360339141l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_147021929m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_361945955l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_164552443m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_364423968l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_701266704m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_366248454l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_812600530m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_370762839l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_619074990m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_372110287l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_618791193m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_373506812l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_255972838m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_381728180l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_283961264m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_388469322l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_416853010m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_415794598l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_217589638m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_448843043l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_696395074m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_458994501l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_779776588m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_472052429l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_441888387m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_475609976l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_528429505m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_491546955l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_844234733m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_503109566l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_531540704m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_517322100l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_358484564m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_533417164l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_817744688m.jpg)" class="photoThumb"></a></div></div>
 </div>
 <div id="paginationBox"><div id="pagination">
-<a href="/viewphotos.php?page=1&amp;a=911246209&amp;uid=10107345&amp;mac=" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=0&amp;a=911246209&amp;uid=10107345" class=""><b>1</b></a> <a href="/viewphotos.php?page=1&amp;a=911246209&amp;uid=10107345" class=""><b>2</b></a> <span class="active"><b>3</b></span> <a href="/viewphotos.php?page=3&amp;a=911246209&amp;uid=10107345" class=""><b>4</b></a> <a href="/viewphotos.php?page=4&amp;a=911246209&amp;uid=10107345" class=""><b>5</b></a> <a href="/viewphotos.php?page=5&amp;a=911246209&amp;uid=10107345" class=""><b>6</b></a> <a href="/viewphotos.php?page=6&amp;a=911246209&amp;uid=10107345" class=""><b>7</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=3&amp;a=911246209&amp;uid=10107345&amp;mac=" class="next"><b>&gt;</b></a>
+<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="#" class=""><b>1</b></a> <a href="#" class=""><b>2</b></a> <span class="active"><b>3</b></span> <a href="#" class=""><b>4</b></a> <a href="#" class=""><b>5</b></a> <a href="#" class=""><b>6</b></a> <a href="#" class=""><b>7</b></a> <span class="dots" style="display:none"></span><a href="#" class="next"><b>&gt;</b></a>
 </div></div>
 </div>
 <div class="rc">
@@ -372,7 +372,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -382,7 +382,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx146.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx146.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
