--- a/photos_911246209_5.html
+++ b/photos_911246209_5.html
@@ -28,12 +28,12 @@
         var widgetsURL = 'http://widgets.friendster.com';
         var profileURL = 'http://profiles.friendster.com';
         var imagesURL = 'http://images.friendster.com/images';		
-    </script><link rel="shortcut icon" href="http://images.friendster.com/images/v2/friendster.ico">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/images/lib/yui-260/build/container/assets/skins/sam/container.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/home.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/interior.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/fs_photos.css">
-<link rel="stylesheet" type="text/css" media="screen, print" href="http://images.friendster.com/201012A-016/css/globnav.css">
+    </script><link rel="shortcut icon" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
+<link rel="stylesheet" type="text/css" media="screen, print" href="#">
 <script>
 window.onerror = function(){return true;};
 function L(B,D){var A=document.createElement("script"),C=document.documentElement.firstChild;A.type="text/javascript";if(A.readyState){A.onreadystatechange=function(){if(A.readyState=="loaded"||A.readyState=="complete"){A.onreadystatechange=null;if(D!==undefined){D();}}}}else{A.onload=function(){if(D!==undefined){D();}}}A.src=B;C.insertBefore(A,C.firstChild);}
@@ -102,16 +102,16 @@ LY1();
 <script type="text/javascript">
     var isEntity = false;
     </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="http://www.friendster.com/"></a></div>
+<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
 <div id="fssecNav" class="clearfix"><ul>
 <li>
-<a target="_top" href="http://www.friendster.com/">Log In</a><b class="plug">|</b>
+<a target="_top" href="#">Log In</a><b class="plug">|</b>
 </li>
-<li><a target="_top" href="http://www.friendster.com/">Join Friendster</a></li>
+<li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
 <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="/#" id="navSearchLink">Search</a>
+<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
 </div>
@@ -142,9 +142,9 @@ LY1();
     var addthis_config = { username: "friendstershare", services_exclude:"print", data_track_clickback: true};
 	var addthis_localize = { share_caption: "Share"}
     </script><div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
-<div class="userThumb"><div class="userThumbBg"><a href="http://profiles.friendster.com/10107345" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
+<div class="userThumb"><div class="userThumbBg"><a href="#" title="lynel" style="background-image: url(http://photos-p.friendster.com/photos/54/37/10107345/1_433202833t.jpg)"></a></div></div>
 <div id="meBox"><div id="meArea">
-<h1>lynel's <a href=" http://www.friendster.com/viewalbums.php?uid=10107345">Photos</a><span class="slash">/</span>puerto galera</h1>
+<h1>lynel's <a href="#">Photos</a><span class="slash">/</span>puerto galera</h1>
 <div id="photoCount" class="p5_tb">
 <a onclick="javascript:pageTracker._trackPageview('/addThis/photos-thumbnails');" id="atbutton"><img src="http://s7.addthis.com/static/btn/sm-share-en.gif" class="addThisBtn" alt="Share Album"></a><script type="text/javascript">
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
@@ -158,29 +158,29 @@ LY1();
 <div class="twoColThinRt">
 <div class="lc">
 <div id="photoGallery" class="clearfix">
-<div class="photoBox"><div class="photoBg"><a title="1_784957250l.jpg" href="/photos/10107345/1/930338163" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_930338163m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_790584493l.jpg" href="/photos/10107345/1/588655961" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_588655961m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_791416681l.jpg" href="/photos/10107345/1/578986631" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_578986631m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_810261210l.jpg" href="/photos/10107345/1/696715313" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_696715313m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_811348381l.jpg" href="/photos/10107345/1/204018717" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_204018717m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_817284190l.jpg" href="/photos/10107345/1/502682133" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_502682133m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_824207001l.jpg" href="/photos/10107345/1/102969957" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_102969957m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_825011578l.jpg" href="/photos/10107345/1/602932651" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_602932651m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_831240394l.jpg" href="/photos/10107345/1/757481639" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_757481639m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_832354498l.jpg" href="/photos/10107345/1/332905417" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_332905417m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_836962684l.jpg" href="/photos/10107345/1/471087630" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_471087630m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_847952137l.jpg" href="/photos/10107345/1/609051390" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_609051390m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_848508344l.jpg" href="/photos/10107345/1/542883383" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_542883383m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_860560931l.jpg" href="/photos/10107345/1/375610311" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_375610311m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_865386416l.jpg" href="/photos/10107345/1/320367196" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_320367196m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_869574279l.jpg" href="/photos/10107345/1/668074861" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_668074861m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_870361710l.jpg" href="/photos/10107345/1/788239806" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_788239806m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_881047388l.jpg" href="/photos/10107345/1/619927799" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_619927799m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_881331970l.jpg" href="/photos/10107345/1/253611253" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_253611253m.jpg)" class="photoThumb"></a></div></div>
-<div class="photoBox"><div class="photoBg"><a title="1_887613625l.jpg" href="/photos/10107345/1/204049858" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_204049858m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_784957250l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_930338163m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_790584493l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_588655961m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_791416681l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_578986631m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_810261210l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_696715313m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_811348381l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_204018717m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_817284190l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_502682133m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_824207001l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_102969957m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_825011578l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_602932651m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_831240394l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_757481639m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_832354498l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_332905417m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_836962684l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_471087630m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_847952137l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_609051390m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_848508344l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_542883383m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_860560931l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_375610311m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_865386416l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_320367196m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_869574279l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_668074861m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_870361710l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_788239806m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_881047388l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_619927799m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_881331970l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_253611253m.jpg)" class="photoThumb"></a></div></div>
+<div class="photoBox"><div class="photoBg"><a title="1_887613625l.jpg" href="#" style="background-image:url(http://photos-p.friendster.com/photos/54/37/10107345/1_204049858m.jpg)" class="photoThumb"></a></div></div>
 </div>
 <div id="paginationBox"><div id="pagination">
-<a href="/viewphotos.php?page=4&amp;a=911246209&amp;uid=10107345&amp;mac=" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=0&amp;a=911246209&amp;uid=10107345" class=""><b>1</b></a> <a href="/viewphotos.php?page=1&amp;a=911246209&amp;uid=10107345" class=""><b>2</b></a> <a href="/viewphotos.php?page=2&amp;a=911246209&amp;uid=10107345" class=""><b>3</b></a> <a href="/viewphotos.php?page=3&amp;a=911246209&amp;uid=10107345" class=""><b>4</b></a> <a href="/viewphotos.php?page=4&amp;a=911246209&amp;uid=10107345" class=""><b>5</b></a> <span class="active"><b>6</b></span> <a href="/viewphotos.php?page=6&amp;a=911246209&amp;uid=10107345" class=""><b>7</b></a> <span class="dots" style="display:none"></span><a href="/viewphotos.php?page=6&amp;a=911246209&amp;uid=10107345&amp;mac=" class="next"><b>&gt;</b></a>
+<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="#" class=""><b>1</b></a> <a href="#" class=""><b>2</b></a> <a href="#" class=""><b>3</b></a> <a href="#" class=""><b>4</b></a> <a href="#" class=""><b>5</b></a> <span class="active"><b>6</b></span> <a href="#" class=""><b>7</b></a> <span class="dots" style="display:none"></span><a href="#" class="next"><b>&gt;</b></a>
 </div></div>
 </div>
 <div class="rc">
@@ -372,7 +372,7 @@ LY1();
 </div>
 </div></div>
 <div id="fsfooter"><div id="fsfooterWrapper">
-<a href="http://www.friendster.com/custhelp.php" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
+<a href="#" target="_top">Help</a><span class="plug">|</span><span class="footerLangSelect">Language</span><script>
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
@@ -382,7 +382,7 @@ LY1();
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
 <option value="en-US" title="" selected>English</option>
 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
-<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="http://www.friendster.com/info/index.php" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="http://www.friendster.com/advertise/index.php" target="_top">Advertise</a><span class="plug">|</span><a href="http://blog.friendster.com/" target="_top">Blog</a><span class="plug">|</span><a href="http://www.olx.com/" target="_blank">Classifieds</a><span class="plug">|</span><a href="http://www.friendster.com/developer" target="_top">Developers</a><span class="plug">|</span><a href="http://www.friendster.com/info/presscenter.php" target="_top">Press Center</a><span class="plug">|</span><a href="http://www.friendster.com/info/privacy.php" target="_top">Privacy</a><span class="plug">|</span><a href="http://www.friendster.com/info/tos.php" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx11.gbxsc.friendster.com--></div>
+<option value="ms-MY" title="Bahasa Malaysia">Malay</option></select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#" target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span class="plug">|</span><a href="#" target="_top">Terms</a><div class="pad_3">Copyright 2002-2011 Friendster, Inc.  All rights reserved.<!--phpqcx11.gbxsc.friendster.com--></div>
 </div></div>
 <script type="text/javascript">
 	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
