--- a/comments_2.html
+++ b/comments_2.html
@@ -99,51 +99,7 @@ LY1();
       </script>
 </head>
 <body class="yui-skin-sam" id="themeIDgreen">
-<script type="text/javascript">
-    var isEntity = false;
-    </script><div id="fshead" class="themeIDgreen"><div id="fsheadContainer" class="clearfix">
-<div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
-<div id="fssecNav" class="clearfix"><ul>
-<li><a target="_top" href="#">Hi Chris</a></li>
-<li id="siteTheme">
-<a href="#" id="currentTheme"></a><div id="themeContainer" style="display:none">
-<a href="#" class="themeColor blue"></a><a href="#" class="themeColor green current"></a><a href="#" class="themeColor purple"></a>
-</div>
-<b class="plug">|</b>
-</li>
-<li>
-<a target="_top" href="#" class="msgLink">Messages</a><a target="_top" href="#" class="msgCount"><span>6</span></a>
-</li>
-<li>
-<b class="plug">|</b><a target="_top" href="#">Wallet</a><b class="plug">|</b><a target="_top" href="#">Settings</a><b class="plug">|</b><a target="_top" href="#">Log Out</a>
-</li>
-</ul></div>
-<div id="fsnav"><ul id="treemenu1">
-<li><a target="_top" href="#" title="Your Friendster: welcome home!">Home</a></li>
-<li><a target="_top" title="View, edit or update your profile " href="#">Profile</a></li>
-<li><a target="_top" href="#" title="See all your friends and connections">Friends</a></li>
-<li><a target="_top" href="#" title="Photos: browse and upload images">Photos</a></li>
-<li><a target="_top" href="#" title="Create and browse classified ads">Classifieds</a></li>
-<li class="gamesMenu
-							"><a href="#" title="Games">Games<img src="http://images.friendster.com/images/v2/joystick.png"></a></li>
-<li class="funMenu lastNavItem">
-<span class="mainfoldericon" title="All things fun: get more out of Friendster">Fun</span><ul>
-<li><a target="_top" href="#" title="Applications: widgets to enrich your profile">Apps</a></li>
-<li><a target="_top" href="#" title="Create, manage or add to your blog">Blogs</a></li>
-<li><a target="_top" href="#" title="Start discussions, get advice, have your say">Forums</a></li>
-<li><a target="_top" href="#" title="Send gifts, greetings and more">Gifts</a></li>
-<li><a target="_top" href="#" title="View your groups; create or join new ones">Groups</a></li>
-<li><a target="_top" href="#" title="Updates Yahoo Pulse with Friendster events like new shoutouts, photo uploads, photo comments and more to come.">Yahoo Updates</a></li>
-</ul>
-</li>
-</ul></div>
-<div id="fssrch" class="yui-skin-sam">
-<form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-<input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
-</form>
-<div id="searchResult"></div>
-</div>
-</div></div>
+
 <div id="fswrap"><div id="fscontent">
 <div id="commentsPage">
 <div id="meAreaBox" class="clearfix"><div id="meAreaWrapper">
@@ -288,9 +244,28 @@ ajajaj</bdo></div>
 </li>
 </ul></div>
 </form>
-<div class="paging commentsLink clearFix"><div id="pagination" class="clearfix">
-<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="#" class=""><b>1</b></a> <a href="#" class=""><b>2</b></a> <span class="active"><b>3</b></span> <a href="#" class=""><b>4</b></a> <a href="#" class=""><b>5</b></a> <a href="#" class=""><b>6</b></a> <a href="#" class=""><b>7</b></a> <span class="dots" style="">...</span><a href="#" class=""><b>18</b></a> <a href="#" class="next"><b>&gt;</b></a>
-</div></div>
+<div class="paging commentsLink clearFix">
+        <div id="pagination" class="clearfix">        
+                <a href="comments_0.html" class=""><b>1</b></a> 
+                <a href="comments_1.html" class=""><b>2</b></a> 
+                <a href="comments_2.html" class=""><b>3</b></a>
+                <a href="comments_3.html" class=""><b>4</b></a> 
+                <a href="comments_4.html" class=""><b>5</b></a> 
+                <a href="comments_5.html" class=""><b>6</b></a> 
+                <a href="comments_6.html" class=""><b>7</b></a> 
+                <a href="comments_7.html" class=""><b>8</b></a> 
+                <a href="comments_8.html" class=""><b>9</b></a> 
+                <a href="comments_9.html" class=""><b>10</b></a> 
+                <a href="comments_10.html" class=""><b>11</b></a> 
+                <a href="comments_11.html" class=""><b>12</b></a> 
+                <a href="comments_12.html" class=""><b>13</b></a> 
+                <a href="comments_13.html" class=""><b>14</b></a> 
+                <a href="comments_14.html" class=""><b>15</b></a> 
+                <a href="comments_15.html" class=""><b>16</b></a> 
+                <a href="comments_16.html" class=""><b>17</b></a> 
+                <a href="comments_17.html" class=""><b></b></a> 
+        </div>
+</div>
 </div>
 <div class="rc">
 <script language="JavaScript">
