--- a/index.html
+++ b/index.html
@@ -109,91 +109,7 @@
 </head>
 
 <body class="yui-skin-sam" id="themeIDgreen"><!-- Safe mode value: Safe mode OFF-->
-      <div id="grabSkinLink"><a href="#"></a></div>
-      <script type="text/javascript">
-            var isEntity = false;
-      </script>
-      <div id="fshead" class="themeIDgreen">
-            <div id="fsheadContainer" class="clearfix">
-                  <div id="fslogoBox"><a id="fslogo" title="Friendster" href="#"></a></div>
-                  <div id="fssecNav" class="clearfix">
-                        <ul>
-                              <li><a target="_top" href="#">Hi Chris</a></li>
-                              <li id="siteTheme">
-                                    <a href="#"></a>
-                                    <div id="themeContainer" style="display:none">
-                                          <a href="#"
-                                                class="themeColor green current"></a><a href="#"
-                                                class="themeColor purple"></a>
-                                    </div>
-                                    <b class="plug">|</b>
-                              </li>
-                              <li>
-                                    <a target="_top" href="#"
-                                          class="msgLink">Messages</a><a target="_top"
-                                          href="#"
-                                          class="msgCount"><span>6</span></a>
-                              </li>
-                              <li>
-                                    <b class="plug">|</b><a target="_top"
-                                          href="#">|</b><a
-                                          target="_top" href="#">Settings</a><b
-                                          class="plug">|</b><a target="_top"
-                                          href="#">Log Out</a>
-                              </li>
-                        </ul>
-                  </div>
-                  <div id="fsnav">
-                        <ul id="treemenu1">
-                              <li><a target="_top" href="#"
-                                          title="Your Friendster: welcome home!">Home</a></li>
-                              <li class="active"><a target="_top" title="View, edit or update your profile "
-                                          href="#">Profile</a></li>
-                              <li><a target="_top" href="#"
-                                          title="See all your friends and connections">Friends</a></li>
-                              <li><a target="_top" href="#"
-                                          title="Photos: browse and upload images">Photos</a></li>
-                              <li><a target="_top" href="#"
-                                          title="Create and browse classified ads">Classifieds</a></li>
-                              <li class="gamesMenu
-							"><a href="#">Games<img
-                                                src="http://images.friendster.com/images/v2/joystick.png"></a></li>
-                              <li class="funMenu lastNavItem">
-                                    <span class="mainfoldericon"
-                                          title="All things fun: get more out of Friendster">Fun</span>
-                                    <ul>
-                                          <li><a target="_top"
-                                                      href="#"
-                                                      title="Applications: widgets to enrich your profile">Apps</a></li>
-                                          <li><a target="_top" href="#"
-                                                      title="Create, manage or add to your blog">Blogs</a></li>
-                                          <li><a target="_top" href="#"
-                                                      title="Start discussions, get advice, have your say">Forums</a>
-                                          </li>
-                                          <li><a target="_top" href="#"
-                                                      title="Send gifts, greetings and more">Gifts</a></li>
-                                          <li><a target="_top" href="#"
-                                                      title="View your groups; create or join new ones">Groups</a></li>
-                                          <li><a target="_top"
-                                                      href="#"
-                                                      title="Updates Yahoo Pulse with Friendster events like new shoutouts, photo uploads, photo comments and more to come.">Yahoo
-                                                      Updates</a></li>
-                                    </ul>
-                              </li>
-                        </ul>
-                  </div>
-                  <div id="fssrch" class="yui-skin-sam">
-                        <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
-                              <input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden"
-                                    value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s"
-                                    id="searchQuery"><input type="hidden" value="1" name="search"><a
-                                    onclick="javascript:document.navsearchform.submit(); return false;" href="#"
-                                    id="navSearchLink">Search</a>
-                        </form>
-                        <div id="searchResult"></div>
-                  </div>
-            </div>
-      </div>
+     
       <div id="wrapProfile">
             <table id="flo_wrapper" align="center" width="1%">
                   <tr>
@@ -268,7 +184,7 @@
                                                                               <tr>
                                                                                     <td class="itd">
                                                                                           <div class="imgblock200"><a
-                                                                                                      href="#"
+                                                                                                      href="view_all_pic.html"
                                                                                                       title="lynel llamas: YT sa wakas nag karoon din ng sariling pic :)"><img
                                                                                                             src="profile_photo.jpg"></a>
                                                                                           </div>
@@ -534,7 +450,7 @@
                                                             </script>
                                                             <div id="content_18">
                                                                   <div class="viewall"><a
-                                                                              href="#">See
+                                                                              href="view_all_pic.html">See
                                                                               All (176)</a></div>
                                                                   <div class="fitem1wrapper">
                                                                         <table class="fitem1table">
@@ -886,7 +802,7 @@
                                                                         </table>
                                                                   </div>
                                                                   <div class="viewall"><a
-                                                                              href="#">See
+                                                                              href="comments_0.html">See
                                                                               All (176)</a></div>
                                                             </div>
                                                       </div>
