modify index and pagination

--- a/comments_4.html
+++ b/comments_4.html
@@ -264,7 +264,7 @@ luvyah</bdo></div>
                 <a href="comments_14.html" class=""><b>15</b></a> 
                 <a href="comments_15.html" class=""><b>16</b></a> 
                 <a href="comments_16.html" class=""><b>17</b></a> 
-                <a href="comments_17.html" class=""><b></b></a> 
+                <a href="comments_17.html" class=""><b>18</b></a> 
         </div>
 </div>
 </div>
