--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                                                                         </div>
                                                                   </div>
                                                                   <div class="viewall"><a
-                                                                              href="#">View
+                                                                              href="view_all_pic.html">View
                                                                               All Albums (9)</a></div>
                                                             </div>
                                                       </div>
